added clients in item and cart services